REGRESSION(iOS 12): Keyboard dismissal leaves WKWebView viewport-fit=cover content offscreen https://bugs.webkit.org/show_bug.cgi?id=192564

Patch by Darryl Pogue <darryl@dpogue.ca> on 2019-09-06
Reviewed by Tim Horton.

Source/WebKit:

The new keyboard height was being read into a variable after the scrollview had already been
adjusted. This worked when the keyboard was opening, because the scrollview is adjusted with
the correct value a second time when the keyboard animation has finished. However, when the
keyboard is closed, the adjustment was being made before the correct height was stored,
leading to the scrollview being positioned as if the keyboard were still open.

* UIProcess/ios/WKScrollView.mm:
(-[WKScrollView _adjustForAutomaticKeyboardInfo:animated:lastAdjustment:]):

LayoutTests:

Added tests to verify scrolling properly adapts to the keyboard insets on iOS.

* fast/scrolling/ios/scrollview-adjusts-to-keyboard-insets-expected.txt: Added.
* fast/scrolling/ios/scrollview-adjusts-to-keyboard-insets.html: Added.

Canonical link: https://commits.webkit.org/215184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249585 268f45cc-cd09-0410-ab3c-d52691b4dbfc